Add user friends list to the homepage

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,7 @@
 %h1 Your Friends
 %ul#friendsList
+  -current_user.friends.each do |friend|
+    %li.friend=friend.email
 
 
 %h2 Your friend is not here? Send an invitation
