Fixes messages for drag and drop

--- a/app/views/users/editor.html.haml
+++ b/app/views/users/editor.html.haml
@@ -1,11 +1,12 @@
 .container
   #upload-status-text
+    Drag a file to the window to start sharing!
+
   %textarea#fileBuffer{ :class => "brush: ruby" }
       
   #drop-box-overlay
     #drop-box-prompt
-      Drag a file to the window to start sharing!
-
+      Drop the file here!
 
   #sharingList
     %h4 You're sharing with..
